--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../Projecte_pagina/CSS/css_index.css">
+    <link rel="stylesheet" href="../CSS/css_index.css">
     <link rel="shortcut icon" href="../IMAGES/favicon.ico"><!--Favicon utilizado para darle una imagen a la pestaña del navegador-->
     <meta name="keywords" content="GRAFICAS, Graficas, RTX, rtx, NVIDIA, nvidia, MSI, msi, gigabyte, GIGABYTE, AORUS, aorus, EVGA, evga, INTEL, intel, I9, i9, I7, i7, I3, i3, I5, i5, PROCESADORES, procesadores, COMPONENTES, componentes, ORDENADORES, ordenadores, PC, pc, RAZER, razer,  KFA2, kfa2">
     <meta name="description" content="Empresa Especializada en los componentes electronicos de ordenadores">
