--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     </div>
     <div class="botonescentro">
         <div class="botones">
-            <button onclick="window.location.href='../HTML/Inici.html';"><strong>CP Componentes</strong></button>   
+            <button onclick="window.location.href='../HTML/Inici.html'"><strong>CP Componentes</strong></button>   
         </div>
     </div>
 </body>
